[package]
name = "beaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "3.0.0"
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.66"
bytes = "1.3.0"
thiserror = "1.0.37"
atoi = "2.0.0"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"

[dev-dependencies]
rand = "0.8.5"

[build-dependencies]
tonic-build = "0.8"
