[package]
name = "beaker"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5" }
crc = { version = "3.0.0" }
tonic = { version = "0.8" }
prost = { version = "0.11" }
tokio = { version = "1.0", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "signal",
] }
async-stream = { version = "0.3.3" }
futures-core = { version = "0.3.25" }
futures-util = { version = "0.3.25" }
anyhow = { version = "1.0.66" }
bytes = { version = "1.3.0" }
thiserror = { version = "1.0.37" }
atoi = { version = "2.0.0" }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
file-lock = { version = "2.1.6" }
parking_lot = { version = "0.12.1" }
tracing = { version = "0.1.37" }
lazy_static = { version = "1.4.0" }
env_logger = { version = "0.10.0" }
nom = { version = "7.1.3" }
termion = { version = "2.0.1" }
is-terminal = { version = "0.4.3" }
clap = { version = "4.1.4", features = ["derive"] }
hostname-validator = { version = "1.1.1" }

[build-dependencies]
tonic-build = { version = "0.8" }

[dev-dependencies]
test-log = { version = "0.2.11" }
env_logger = { version = "0.10.0" }
tempfile = { version = "3.3.0" }
